Add some simple pagination links

--- a/index.html
+++ b/index.html
@@ -106,3 +106,7 @@ paginate:
 
 {% endfor %}
 
+<div class="paginator">
+    {% if paginator.next_page %}<span class="paginator-next"><a href="{{ paginator.next_page_path}}">Next</a></span>{% endif %}
+    {% if paginator.previous_page %}<span class="paginator-previous"><a href="{{ paginator.previous_path }}">Prev</a></span>{% endif %}
+</div>
