--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 ---
 layout: default
-paginate:
-  collection: cards
-  per_page: 10
-  limit: false
 ---
 
-{% for card in paginator.cards %}
+{% for card in site.cards %}
 
 <div class="card">
 
